# cerniera

./: .gitlab-ci.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: deflate_zip.rs  sendfile_zip.rs  write_zip.rs
src/: archive.rs  lib.rs  stream.rs
tests/: roundtrip.rs
