[package]
name = "cerniera"
version = "0.1.0"
description = "A ZIP archive encoder that never copies your data"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/M4SS-Code/cerniera"
rust-version = "1.88"
keywords = ["zip", "archive", "streaming", "zero-copy"]
categories = ["compression", "encoding", "no-std"]

[features]
default = ["std"]
std = ["crc32fast/std"]
jiff = ["dep:jiff"]

[dependencies]
bytes = { version = "1", default-features = false }
crc32fast = { version = "1.2", default-features = false }
futures-core = { version = "0.3", default-features = false }
jiff = { version = "0.2", default-features = false, optional = true }
pin-project-lite = "0.2"

[dev-dependencies]
flate2 = "1"
futures-util = { version = "0.3", default-features = false }
jiff = "0.2"
memmap2 = "0.9"
nix = { version = "0.31", features = ["zerocopy"] }
tokio = { version = "1", features = ["macros", "rt", "io-util", "fs"] }
zip = { version = "8", default-features = false, features = ["deflate-flate2"] }

[package.metadata.docs.rs]
all-features = true

[lints.rust]
unsafe_code = "deny"
unreachable_pub = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
await_holding_refcell_ref = "deny"
map_unwrap_or = "warn"
needless_lifetimes = "warn"
needless_raw_string_hashes = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"
str_to_string = "warn"
clone_on_ref_ptr = "warn"

[[example]]
name = "sendfile_zip"
required-features = ["jiff"]

[[example]]
name = "deflate_zip"
required-features = ["jiff"]
